Name: Stonehouse
Version: 1.0
Cabal-Version: >=1.8
License: BSD3
License-file: COPYING
Author: Matt Windsor
Maintainer: matt.windsor@ury.york.ac.uk
Bug-Reports: mailto:computing@ury.york.ac.uk
Stability: Experimental
Synopsis: Object generator set for Rapier
Description:
  Stonehouse is a code generator set for the Rapier data retrieval
  system created by URY, generating code representing Rapier objects.
Category: Code Generation
Build-Type: Simple

Library
  Ghc-Options: -Wall
  Build-Depends: base >= 4 && < 5
  Exposed-Modules: Rapier.Obgen.Php.Generate,
                   Rapier.Obgen.Php.Compile,
                   Rapier.Obgen.Object,
                   Rapier.Obgen.Utils

Executable phpgenerate
  Main-Is: Main.lhs
  Build-Depends: base >= 4 && <5
  Hs-Source-Dirs: phpgenerate, .
  Ghc-Options: -Wall

Executable phpcompile
  Main-Is: Main.lhs
  Build-Depends: base >= 4 && <5
  Hs-Source-Dirs: phpcompile, .
  Ghc-Options: -Wall

Test-suite tests
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    tests
  Main-is:           Tests.lhs
  Build-depends:     base >= 4 && < 5,
                     Stonehouse,
                     test-framework >= 0.6 && < 0.7,
                     test-framework-quickcheck2 >= 0.2.9 && < 0.3,
                     QuickCheck >= 2.4.0.1
