Name: Stonehouse
Version: 1.0
Cabal-Version: >=1.8
License: BSD3
License-file: COPYING
Author: Matt Windsor
Maintainer: matt.windsor@ury.york.ac.uk
Bug-Reports: mailto:computing@ury.york.ac.uk
Stability: Experimental
Synopsis: Object generator set for Rapier
Description:
  Stonehouse is a code generator set for the Rapier data retrieval
  system created by URY, generating code representing Rapier objects.
Category: Code Generation
Build-Type: Simple

Library
  Ghc-Options: -Wall
  Build-Depends: base >= 4 && < 5,
                 json
  Hs-Source-Dirs: src
  Exposed-Modules: Rapier.Obgen.Json.Source,
                   Rapier.Obgen.Php.Generate,
                   Rapier.Obgen.Php.Compile,
                   Rapier.Obgen.Object,
                   Rapier.Obgen.Utils,
                   Rapier.Types

Executable rapier-jsonsource
  Main-Is: Main.lhs
  Build-Depends: base >= 4 && <5,
                 json
  Hs-Source-Dirs: stubs/jsonsource, src
  Ghc-Options: -Wall

Executable rapier-phpgenerate
  Main-Is: Main.lhs
  Build-Depends: base >= 4 && <5
  Hs-Source-Dirs: stubs/phpgenerate, src
  Ghc-Options: -Wall

Executable rapier-phpcompile
  Main-Is: Main.lhs
  Build-Depends: base >= 4 && <5
  Hs-Source-Dirs: stubs/phpcompile, src
  Ghc-Options: -Wall

Test-suite tests
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    tests
  Main-is:           Tests.lhs
  Build-depends:     base >= 4 && < 5,
                     json,
                     Stonehouse,
                     test-framework >= 0.6 && < 0.7,
                     test-framework-quickcheck2 >= 0.2.9 && < 0.3,
                     QuickCheck >= 2.4.0.1
